--- a/docs/艺藏/饮馔/酒谱.md
+++ b/docs/艺藏/饮馔/酒谱.md
@@ -1,69 +1,80 @@
-酒谱 宋 窦苹
+---
+title: 酒谱
+index: true
+icon: editor
+order: 35
+category:
+  - 艺藏
+  - 饮馔
+tag:
+  - 窦苹
+  - 宋
+---
 
-提要
+酒谱 宋 窦苹  
 
-　　《酒谱》一卷，宋窦苹撰。苹字子野，汶上人。晁公武《读书志》载苹有《新唐书音训》四卷，在吴缜、孙甫之前，当为仁宗时人。公武称其学问精博，盖亦好古之士。别本有刻作窦革者，然详其名字，乃有取于鹿鸣之诗，作苹字者是也。其书杂叙酒之故事，寥寥数条，似有脱佚，然《宋志》着录，实作一卷。观其始于酒名，终于酒令，首尾已具，知原本仅止于此。大抵摘取新颖字句，以供采掇，与谱录之体亦稍有不同。其引杜甫少年行醉倒，终同卧竹根句，谓以竹根为饮器。考庾信诗有山杯捧竹根句，苹所说不为杜撰，然核甫诗意，究以醉卧于竹下为是。苹之所说，姑存以备异闻可也。
-　
+提要  
 
-酒谱
+《酒谱》一卷，宋窦苹撰。苹字子野，汶上人。晁公武《读书志》载苹有《新唐书音训》四卷，在吴缜、孙甫之前，当为仁宗时人。公武称其学问精博，盖亦好古之士。别本有刻作窦革者，然详其名字，乃有取于鹿鸣之诗，作苹字者是也。其书杂叙酒之故事，寥寥数条，似有脱佚，然《宋志》着录，实作一卷。观其始于酒名，终于酒令，首尾已具，知原本仅止于此。大抵摘取新颖字句，以供采掇，与谱录之体亦稍有不同。其引杜甫少年行醉倒，终同卧竹根句，谓以竹根为饮器。考庾信诗有山杯捧竹根句，苹所说不为杜撰，然核甫诗意，究以醉卧于竹下为是。苹之所说，姑存以备异闻可也。  
 
-　　酒名
+酒谱  
 
-　　《说文》曰：酴，酒母也。醴，一宿酒也。醪，滓汁酒也。酎，三重酒也。醨，薄酒也。醑，莤酒也。
+酒名  
 
-　　欢伯
+《说文》曰：酴，酒母也。醴，一宿酒也。醪，滓汁酒也。酎，三重酒也。醨，薄酒也。醑，莤酒也。  
 
-　　酒为欢伯，其义见《易林》，无贵贱贤不肖，中外共甘而乐之。
+欢伯  
 
-　　酒
+酒为欢伯，其义见《易林》，无贵贱贤不肖，中外共甘而乐之。  
 
-　　皮日休诗云：“明朝有物充君信，酒三瓶寄夜航。”酒，江外酒名。
+酒  
 
-　　酒旗
+皮日休诗云：“明朝有物充君信，酒三瓶寄夜航。”酒，江外酒名。  
 
-　　《韩非子》云：“宋人沽酒，悬帜甚髙。”酒市有旗始见于此，或谓之帘。
+酒旗  
 
-　　刘白堕
+《韩非子》云：“宋人沽酒，悬帜甚髙。”酒市有旗始见于此，或谓之帘。  
 
-　　江东人刘白堕善酿，六月以罂盛酒于日中，经旬味不动而愈香美，使人久醉。朝士千里相馈，号白鹤觞，亦名骑驴酒。
+刘白堕  
 
-　　醉圣
+江东人刘白堕善酿，六月以罂盛酒于日中，经旬味不动而愈香美，使人久醉。朝士千里相馈，号白鹤觞，亦名骑驴酒。  
 
-　　李白每醉为文，未尝差人，目为醉圣。白乐天自称醉尹，皮日休自称醉士。
+醉圣  
 
-　　祖台州书
+李白每醉为文，未尝差人，目为醉圣。白乐天自称醉尹，皮日休自称醉士。  
 
-　　晋祖台州与王荆州书：古人以酒为戒，愿君屏爵弃巵，焚罍毁榼，殛仪狄于羽山，放杜康于三危。
+祖台州书  
 
-　　昆仑觞
+晋祖台州与王荆州书：古人以酒为戒，愿君屏爵弃巵，焚罍毁榼，殛仪狄于羽山，放杜康于三危。  
 
-　　魏贾锵有奴，善别水。尝乘舟于黄河中流，以匏瓠接河源水七八升，经宿色如绛。以酿酒，名昆仑觞，芳味絶妙。
+昆仑觞  
 
-　　般若汤
+魏贾锵有奴，善别水。尝乘舟于黄河中流，以匏瓠接河源水七八升，经宿色如绛。以酿酒，名昆仑觞，芳味絶妙。  
 
-　　北僧谓为般若汤，盖廋词以避法禁。
+般若汤  
 
-　　卧黍穰
+北僧谓为般若汤，盖廋词以避法禁。  
 
-　　凡人醉卧黍穰中，必成癞醉。而饮茶必发膀胱气，食咸多成消中。
+卧黍穰  
 
-　　瘿木杯
+凡人醉卧黍穰中，必成癞醉。而饮茶必发膀胱气，食咸多成消中。  
 
-　　松林唱和有瘿木杯诗，盖用木节为之。
+瘿木杯  
 
-　　竹根
+松林唱和有瘿木杯诗，盖用木节为之。  
 
-　　老杜诗云：“醉倒终同卧竹根。”盖以竹根为饮器也，见江淹集。
+竹根  
 
-　　莲子杯
+老杜诗云：“醉倒终同卧竹根。”盖以竹根为饮器也，见江淹集。  
 
-　　唐人有莲子杯，白公诗中称之，周穆王时有杯名常满。
+莲子杯  
 
-　　安石榴
+唐人有莲子杯，白公诗中称之，周穆王时有杯名常满。  
 
-　　顿孙国有安石榴，取汁停盆中，数日成美酒。
+安石榴  
 
-　　酒令
+顿孙国有安石榴，取汁停盆中，数日成美酒。  
 
-　　酒令云：“孟尝门下三千客，大有同人。湟水渡头十万羊，未济小畜。”又云：“锄麑触槐，死作木边之鬼。豫让吞炭，终为山下之灰。”又云：“夏禹见雨下，使李牧送木履与萧何，萧何道何消。田单定垦田，使贡禹送禹贡与李徳，李德云得履。”又云：“寺里喂牛僧茹草，观中煑菜道供柴。”又曰：“山上采黄芩，下山逢着老翁吟。老翁吟云：白头搔更短，浑欲不胜簪。上山采交藤，下山逢着醉胡僧。醉胡僧云：何年饮着闻声酒，直到而今醉不醒。山上采乌头，下山逢着少年游。少年游云：霞鞍金口骝，豹袖紫貂裘。又云：碾茶曹子建，开匣木悬虚。
-　
+酒令  
+
+酒令云：“孟尝门下三千客，大有同人。湟水渡头十万羊，未济小畜。”又云：“锄麑触槐，死作木边之鬼。豫让吞炭，终为山下之灰。”又云：“夏禹见雨下，使李牧送木履与萧何，萧何道何消。田单定垦田，使贡禹送禹贡与李徳，李德云得履。”又云：“寺里喂牛僧茹草，观中煑菜道供柴。”又曰：“山上采黄芩，下山逢着老翁吟。老翁吟云：白头搔更短，浑欲不胜簪。上山采交藤，下山逢着醉胡僧。醉胡僧云：何年饮着闻声酒，直到而今醉不醒。山上采乌头，下山逢着少年游。少年游云：霞鞍金口骝，豹袖紫貂裘。又云：碾茶曹子建，开匣木悬虚。  
